--- a/covid19-tracker/src/app/components/countries/countries.component.html
+++ b/covid19-tracker/src/app/components/countries/countries.component.html
@@ -1,9 +1,15 @@
 <div class="jumbotron bg-white text-center">
-  <h1 class="display-4">Corona Covid-19 Countries Wice</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
+  <h1 class="display-4">Corona Covid-19 Sytuacja w poszczególnych państwach</h1>
+
+  <hr>
+  <div class="mx-auto">
+    <div class="form-group col-lg-5 mx-auto">
+      <label for="c">Wybierz kraj</label>
+      <select name="" class="form-control" id="c" #input (change)='updateValues(input.value)'>
+        <option value="{{con}}" *ngFor='let con of countries'>{{con}}</option>
+      </select>
+    </div>
+  </div>
+  <app-dashboard-card [totalConfirmed]="totalConfirmed" [totalActive]="totalActive" [totalRecovered]="totalRecovered" [totalDeaths]="totalDeaths"></app-dashboard-card>
+
 </div>
