--- a/covid19-tracker/src/app/components/navbar/navbar.component.html
+++ b/covid19-tracker/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="countries">Countries</a>
+        <a class="nav-link" routerLink="countries">Państwa</a>
       </li>
     </ul>
   </div>
