--- a/covid19-tracker/src/app/components/home/home.component.html
+++ b/covid19-tracker/src/app/components/home/home.component.html
@@ -3,3 +3,50 @@
   <hr>
   <app-dashboard-card [totalConfirmed]="totalConfirmed" [totalActive]="totalActive" [totalRecovered]="totalRecovered" [totalDeaths]="totalDeaths"></app-dashboard-card>
 </div>
+
+<hr>
+
+<div class="ui form">
+  <div class="inline fields">
+    <label for="casetype">Wybierz rodzaj danych : </label>
+    <div class="field">
+      <div class="ui radio checkbox">
+        <input type="radio" id='c'  value="c" name="casetype" checked="" tabindex="0" class="hidden">
+        <label for='c'>Potwierdzone</label>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui radio checkbox">
+        <input type="radio" value='d'  id='d' name="casetype" tabindex="0" class="hidden">
+        <label for='d'>Zmarli</label>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui radio checkbox">
+        <input type="radio" value='r' id='r' name="casetype" tabindex="0" class="hidden">
+        <label for='r'>Wyzdrowieni</label>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui radio checkbox">
+        <input id='a' #a type="radio"  value='a' name="casetype" tabindex="0" class="hidden">
+        <label for='a'>Aktywne</label>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<div class="row">
+  <div class="col">
+    <google-chart [data]="pieChart"></google-chart>
+
+  </div>
+  <div class="col">
+    <google-chart [data]="columnChart"></google-chart>
+  </div>
+
+</div>
+
